# snapvault

./: .gitignore  NEXT_TASKS.md  README.md  REFACTORING_SUMMARY.md  TEST_COVERAGE.md
snapvault/: Cargo.toml
snapvault/src/: chunking.rs  cli.rs  error.rs  index.rs  lib.rs  main.rs  storage.rs  utils.rs
snapvault/src/commands/: backup.rs  delete.rs  init.rs  list.rs  mod.rs  restore.rs
snapvault/src/repository/: config.rs  mod.rs  snapshot.rs
snapvault/tests/: integration_tests.rs
