[package]
name = "snapvault"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
walkdir = "2.5"
uuid = { version = "1.10", features = ["v4"] }
blake3 = "1.5"
hex = "0.4"

[dev-dependencies]
tempfile = "3.13"
assert_fs = "1.1"
predicates = "3.1"
